--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,17 +12,6 @@
     %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"}
     %script{:crossorigin => "anonymous", :integrity => "sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=", :src => "https://code.jquery.com/jquery-3.3.1.js"}
   %body
-    %nav
-      .nav-wrapper.blue-grey
-        %a.brand-logo{:href => "#"} Logo
-        %ul#nav-mobile.right.hide-on-med-and-down
-          %li
-            %a{:href => "sass.html"} Sass
-          %li
-            %a{:href => "badges.html"} Components
-          %li
-            %a{:href => "collapsible.html"} JavaScript
+    =render partial: "shared/footer"
     = yield
-  %footer
-    %p
-      Copyright miniblog 2018.
+    =render partial: "shared/footer"
