--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -1,6 +1,6 @@
 %nav.clearfix
   .nav-wrapper.blue-grey
-    %a.brand-logo{:href => "#"} Logo
+    %a.brand-logo{:href => "#"} MinBlog
     %ul#nav-mobile.right.hide-on-med-and-down
       %li
         %a{href: "sass.html"} Sass
