--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -2,9 +2,13 @@
   .nav-wrapper.blue-grey
     %a.brand-logo{:href => "#"} MinBlog
     %ul#nav-mobile.right.hide-on-med-and-down
-      %li
-        %a{href: "sass.html"} Sass
-      %li
-        %a{href: "badges.html"} Components
-      %li
-        %a{href: "collapsible.html"} JavaScript
+      - if user_signed_in?
+        %li
+          = link_to current_user.name, "#"
+        %li
+          = link_to "ログアウト", destroy_user_session_path, method: :delete
+      - else
+        %li
+          = link_to "ログイン", new_user_session_path
+        %li
+          = link_to "新規登録", new_user_registration_path
