Edit index to set articles

--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,4 +1,6 @@
-.contents
-  =render partial: "article"
+.contents.grey.lighten-4
+  .row
+    - @articles.each do |article|
+      =render partial: "article", locals: {article: article}
 
 
