--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -6,6 +6,6 @@
     .card-content
       %p= article.content
     .card-action
-      = link_to "show", "#", class: "card-action-show"
-      = link_to "edit", "#", class: "card-action-edit"
-      = link_to "delete", "#", class: "card-action-delete"
+      = link_to "show", article_path(article), class: "card-action-show"
+      = link_to "edit", edit_article_path(article), class: "card-action-edit"
+      = link_to "delete", article_path(article), method: :delete,class: "card-action-delete"
