Edit haml to add comment

--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -10,12 +10,19 @@
         - if user_signed_in? && @article.user == current_user
           .card-action
             = link_to "edit", edit_article_path(@article)
-            = link_to "delete", article_path(@article), method: :delete,
-  / .container.row
-  /   .col.s12.m12
-  /     .card
-  /       =form_for [@article, @comment] do |f|
-  /         = f.text_field :content, placeholder: 'コメントを入力してください', cols: "1"
-  /         = f.submit 'Send'
-  /       .card-comment
-  /           aaaa
+            = link_to "delete", article_path(@article), method: :delete
+
+  .container.row
+    .col.s12.m12
+      .card
+        %h5 コメント
+        .card-form
+          =form_for [@article, @comment] do |f|
+            = f.text_field :content, placeholder: 'コメントを入力してください', cols: "1"
+            = f.submit 'Send'
+        .card-comment
+          %ul
+            - @comments.each do |comment|
+              %li
+                %strong="#{comment.user.name}: "
+                = comment.content
