--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -1,8 +1,3 @@
-.contents.row
-  .container
-    = form_for @article do |f|
-      %h3 投稿する
-      = f.text_field :title, placeholder: 'タイトルを入力してください'
-      = f.text_area :content, placeholder: '記事を入力してください'
-      = f.file_field :image
-      = f.submit 'Send' , class: "new_article__button"
+.contents.grey.lighten-4
+  .container.row
+    = render partial: "form", locals: {article: @article, page_title: "新規投稿"}
