--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,6 +1,6 @@
 .contents.grey.lighten-4
-  .row
-    - @articles.each do |article|
-      =render partial: "article", locals: {article: article}
-
+  - @articles.each_slice(3) do |articles|
+    .row
+      - articles.each do |article|
+        =render partial: "article", locals: {article: article}
 
