Add root link to logo

--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -1,6 +1,6 @@
 %nav.clearfix
   .nav-wrapper.blue-grey
-    %a.brand-logo{:href => "#"} MinBlog
+    %a.brand-logo{href: root_path} MinBlog
     %ul#nav-mobile.right.hide-on-med-and-down
       - if user_signed_in?
         %li
