Edit nav to add mypage link

--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -4,7 +4,7 @@
     %ul#nav-mobile.right.hide-on-med-and-down
       - if user_signed_in?
         %li
-          = link_to current_user.name, "#"
+          = link_to current_user.name, user_path(current_user)
         %li
           = link_to "ログアウト", destroy_user_session_path, method: :delete
         %li
