--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -3,3 +3,13 @@
   min-height: 600px;
   margin: 20px auto;
 }
+.brand-logo {
+  margin-left: 20px;
+}
+#nav-mobile {
+  margin-right: 20px;
+}
+.comment-btn {
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
