--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,4 +1,4 @@
-.contents.grey.lighten-4
+.contents.article-area.grey.lighten-4
   - @articles.each_slice(3) do |articles|
     .row
       - articles.each do |article|
