--- a/app/assets/stylesheets/_style.scss
+++ b/app/assets/stylesheets/_style.scss
@@ -13,3 +13,9 @@
   margin-right: 20px;
   margin-bottom: 20px;
 }
+#article-image__img:hover{
+
+        cursor: pointer;
+        cursor: hand;
+
+}
