--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,6 +1,1 @@
-.contents.grey.lighten-4
-  - @articles.each_slice(3) do |articles|
-    .row
-      - articles.each do |article|
-        =render partial: "articles/article", locals: {article: article}
-
+=render partial: "articles/articles-area", locals: {articles: @articles}
