--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     %script{src: "https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"}
     %script{crossorigin: "anonymous", integrity: "sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=", src: "https://code.jquery.com/jquery-3.3.1.js"}
     %link{href: "https://fonts.googleapis.com/icon?family=Material+Icons", rel: "stylesheet"}
-
+    =javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/exif-js/2.3.0/exif.min.js"
   %body
     =render partial: "shared/navbar"
     = yield
